--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/bootstrap-theme.min.css">
   </head>
   <body>
-    <app></app>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
