--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
         <!-- 使用指令 v-link 进行导航。 -->
         <a v-link="{ path: '/foo' }">Go to Foo</a>
         <a v-link="{ path: '/bar' }">Go to Bar</a>
-        <a v-link="{ path: '/foo/bvuex.jsar' }">Go to Foo/Bar</a>
+        <a v-link="{ path: '/foo/bar' }">Go to Foo/Bar</a>
     </p>
     <!-- 路由外链 -->
     <router-view></router-view>
